--- a/vue/package.json
+++ b/vue/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.4",
     "swiper": "^12.0.3",
     "vue": "^3.5.24",
